# gbcc-android

./: .gitignore  .gitmodules  LICENSE  README.md  TutorialRoboScript.json  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: build-apk.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/debug/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: .gitignore  Tutorial.gbc
app/src/main/assets/licenses/: OpenAL Soft
app/src/main/assets/shaders/: colour-correct.frag  dotmatrix.frag  flipped.vert  frameblend.frag  nothing.frag  subpixel.frag  vert.vert
app/src/main/cpp/: CMakeLists.txt  gbcc.cpp
app/src/main/java/com/philj56/gbcc/: AdditionalMappingsActivity.kt  ArrangeActivity.kt  BaseActivity.kt  CheatActivity.kt  GLActivity.kt  IniDataStore.kt  LicenseActivity.kt  LicenseListActivity.kt  MainActivity.kt  RemapActivity.kt  RomConfigActivity.kt  SaveBackupAgent.kt  SettingsActivity.kt
app/src/main/java/com/philj56/gbcc/additionalMappings/: AdditionalMapping.kt  AdditionalMappingAdapter.kt  KeyCodeNames.kt
app/src/main/java/com/philj56/gbcc/animations/: CircularReveal.kt
app/src/main/java/com/philj56/gbcc/arrange/: ResizableImage.kt  ResizableLayout.kt  ScreenPlaceholder.kt
app/src/main/java/com/philj56/gbcc/cheat/: Cheat.kt  CheatAdapter.kt  CheatDialogFragment.kt
app/src/main/java/com/philj56/gbcc/fileList/: FileAdapter.kt  PathAdapter.kt
app/src/main/java/com/philj56/gbcc/main/: CreateSaveExportZip.kt  EditTextDialogFragment.kt  FileAdapter.kt  ImportOverwriteAdapter.kt  ImportOverwriteDialogFragment.kt  PathAdapter.kt
app/src/main/java/com/philj56/gbcc/materialPreferences/: MaterialListPreferenceDialogFragmentCompat.java  MaterialPreferenceDialogFragmentCompat.java  MaterialSeekbarPreference.java  MaterialTurboPreferenceDialogFragmentCompat.java  UnPressableLinearLayout.java
app/src/main/java/com/philj56/gbcc/preference/: MaterialListPreferenceDialogFragmentCompat.java  MaterialPreferenceDialogFragmentCompat.java  MaterialTurboPreferenceDialogFragmentCompat.java  SliderPreference.java  UnPressableLinearLayout.java
app/src/main/java/com/philj56/gbcc/remap/: RemapButtonDialogFragment.kt
app/src/main/java/com/philj56/gbcc/romConfig/: IniDataStore.kt  RomConfigFragment.kt
app/src/main/java/com/philj56/gbcc/settings/: SummaryListPreference.kt  TurboPreference.kt  UnitSeekbarPreference.kt
app/src/main/res/color/: file_entry_divider.xml  file_entry_folder_icon.xml  file_entry_text.xml  path_entry_text.xml
app/src/main/res/color-night/: file_entry_divider.xml  file_entry_text.xml
app/src/main/res/drawable/: device_border_bottom.xml  device_border_bottom_corner.xml  file_entry_background.xml  file_entry_background_selected.xml  file_entry_divider.xml  ic_arrow_back_24dp.xml  ic_arrow_back_white_24dp.xml  ic_baseline_more_vert_24.xml  ic_button_ab.xml  ic_button_ab_dmg.xml  ic_button_ab_dmg_dark.xml  ic_button_ab_dmg_dark_pressed.xml  ic_button_ab_dmg_dark_selector.xml  ic_button_ab_dmg_pressed.xml  ic_button_ab_dmg_selector.xml  ic_button_ab_pressed.xml  ic_button_ab_selector.xml  ic_button_dpad.xml  ic_button_dpad_background.xml  ic_button_dpad_highlight.xml  ic_button_dpad_highlight_pressed_down.xml  ic_button_dpad_highlight_pressed_down_left.xml  ic_button_dpad_highlight_pressed_down_right.xml  ic_button_dpad_highlight_pressed_left.xml  ic_button_dpad_highlight_pressed_right.xml  ic_button_dpad_highlight_pressed_up.xml  ic_button_dpad_highlight_pressed_up_left.xml  ic_button_dpad_highlight_pressed_up_right.xml  ic_button_dpad_pressed_down.xml  ic_button_dpad_pressed_down_left.xml  ic_button_dpad_pressed_down_right.xml  ic_button_dpad_pressed_left.xml  ic_button_dpad_pressed_right.xml  ic_button_dpad_pressed_up.xml  ic_button_dpad_pressed_up_left.xml  ic_button_dpad_pressed_up_right.xml  ic_button_startselect.xml  ic_button_startselect_dmg.xml  ic_button_startselect_dmg_dark.xml  ic_button_startselect_dmg_dark_pressed.xml  (+91 more)
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_additional_mappings.xml  activity_arrange.xml  activity_arrange_sliders.xml  activity_cheat_list.xml  activity_gl.xml  activity_license.xml  activity_license_list.xml  activity_main.xml  activity_remap_controller.xml  activity_rom_config.xml  activity_settings.xml  button_dpad.xml  button_dpad_resizable.xml  create_folder.xml  dialog_additional_mapping.xml  dialog_create_folder.xml  dialog_directory_actions.xml  dialog_edit_cheat.xml  dialog_import_overwrite.xml  dialog_multiplayer_searching.xml  dialog_remap_button.xml  dialog_rom_actions.xml  entry_additional_mapping.xml  entry_cheat.xml  entry_file.xml  entry_import_overwrite.xml  entry_license.xml  entry_path.xml  entry_unit_seekbar_preference.xml  file_entry.xml  file_entry_layout.xml  license_entry.xml  preference_widget_slider.xml  switch_turbo_resizable.xml
app/src/main/res/layout-land/: activity_arrange.xml  activity_gl.xml
app/src/main/res/menu/: file_menu.xml  main_menu.xml  move_menu.xml
app/src/main/res/values/: array.xml  attrs.xml  colors.xml  dimensions.xml  keys.xml  strings.xml  styles.xml  theme_adaptive.xml  themes.xml
app/src/main/res/values-land/: keys.xml  strings.xml
app/src/main/res/values-night/: theme_adaptive.xml  themes.xml
app/src/main/res/values-night-v23/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/xml/: preferences.xml  preferences_audio.xml  preferences_behaviour.xml  preferences_display.xml  preferences_graphics.xml  preferences_miscellaneous.xml  rom_config.xml
gradle/wrapper/: gradle-wrapper.properties
